wp-content/plugins/RisiriWidget/classes/table/table.css
/*
Theme Name: RiSiRi Theme
Theme URI: N.V.T.
Author: Max den Ouden
Author URI: http://mextro.nl/
Description: The Theme used for the RiSiRi Magazijn Applicatie.
Version: 1.0
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: mextro

This theme, like WordPress, is licensed under the GPL.
Use it to make something cool, have fun, and share what you've learned with others.
*/

@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,900');


/*font-family: 'Lobster', cursive;*/
/*font-family: 'Abel', sans-serif;*/
/*font-family: 'Pacifico', cursive;*/
/*font-family: 'Abril Fatface', cursive;*/

body{
    background-color: #EDF7F9;
}

.navbar-logo img{
    width: 170px;
    height: 170px;
    display: inline;
    float: left;
}

.container{
    width: 100%;
    max-width: 100%;
    margin: auto;

}

.table-container{

}


#tabs{
    background-color: rgba(255,255,255,0);
    border: none;
    margin: auto;
    width: 90%;
}

#table-nav{
    background-color: rgba(255,255,255,0);
    border: none;
    margin-left: 50px;
    text-align: center;
}

#table-nav li{
    border-top-left-radius: 21px;
    border-top-right-radius: 21px;
    border: 4px solid #B6B6B6;
    border-bottom: none;
    width: 150px;
    text-align: center;
    display: grid;
}

.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited{
    color: #39A0E2;
}

.ui-tabs .ui-tabs-nav li.ui-tabs-active{
    background-color: #41b2f2;
}

.table-nav .ui-tabs .ui-tabs-nav li.ui-tabs-active{
    border: 4px solid #c23333 !important;
    border-bottom: none !important;
}

.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited{
    color: #fff !important;
}



#table-name{
    font-size: 3em;
    color: #67B0E3;
    font-family: "Roboto";
    font-weight: 300;
    margin: auto;
    line-height: 170px;
    padding-right: 100px;
    text-align: center;
    display: block;

}

#tab-artikelen{
    padding: 0;
}

#tab-telaat{
    padding: 0;

}

.telaat-nav{
    background-color: #E23939 !important;

}

.telaat-nav a{
    color: #fff !important;
}



/*All Tables for 100% width*/

#artikelen-table{
    width: 100%;
    margin: auto;

}

#klanten-table{
    width: 100%;
    margin: auto;
}

#uitleningen-table{
    width: 100%;
    margin: auto;
}
#reserveringen-table{
    width: 100%;
    margin: auto;
}

#telaat-table{
    width: 100%;
    margin: auto;
}


#tab-klanten{
    padding: 0;
}
#tab-reserveringen{
    padding: 0;
}

#tab-uitleningen{
    padding: 0;
}

#data-artikelen{
    text-align: center;
    border-collapse: collapse;
    border-radius: 1em;
    overflow: hidden;
    width: 100%;
}

#data-klanten{
    text-align: center;
    border-collapse: collapse;
    border-radius: 1em;
    overflow: hidden;
    width: 100%;
}

#tabs tbody{
    border-spacing: 0;
    background-color: #CBEBF6;
    border-right: 4px solid #B6B6B6;
    border-left: 4px solid #B6B6B6;
    border-bottom: 4px solid #B6B6B6;
    border-radius: 5px;

}

#tabs thead{
    /*border: 4px solid #B6B6B6;*/
    /*background-color: #CBEBF6 !important;*/
    border-right: 4px solid #B6B6B6;
    border-left: 4px solid #B6B6B6;
    border-top: 4px solid #B6B6B6;
}

#tabs thead tr{
    background-color: #CBEBF6 !important;
}
#tabs tr{
    height: 45px;
}

#tabs th{
    font-family: 'Roboto';
    font-weight: 900;
    color: #707070;
    border: 1px solid #B6B6B6;
    text-align: center;

}

#tabs td{
    border: 1px solid #B6B6B6;
    font-family: 'Roboto';
    font-weight: 400;
    text-align: center;
    color: #707070;
    line-height: 20px;
    font-size: 15px;
    height: 45px;
}

.textarea {
    width: 40%;
    display: table-cell;
    text-align: left !important;
    padding-left: 10px;
    max-height: 45px;
    max-width: 100px;
    overflow: -webkit-paged-x;
    white-space: normal;

}

.doel {
    width: 20%;
    display: table-cell;
    text-align: left !important;
    padding-left: 10px;
    max-height: 45px;
    max-width: 100px;
    overflow: -webkit-paged-x;
    white-space: normal;

}

#tabs input[type="text"]
{
    background: transparent;
    border: none;
    font-family: 'Roboto';
    font-weight: 400;
    text-align: center;
    color: #fff;
    line-height: 40px;
    font-size: 15px;
}

#tabs input[type="number"]
{
    background: transparent;
    border: none;
    text-align: center;
    font-family: 'Roboto';
    font-weight: 400;
    color: #707070;
    width: 100%;
    line-height: 40px;
}

/*Toevoegen Rij*/
.fulltable-creating{

}
.fulltable-creating td{
    background-color: #67B0E3 !important;
}


/*Bewerken Rij*/
.fulltable-editing td{
    background-color: #9F9F9F;
    height: 45px;
}
.fulltable-editing input[type="text"]{
    color: #fff;
    margin: 0 !important;
}
/*Bewerken Omschrijving*/
.textarea input[type="text"]{
    text-align: left !important;
}


/*Column Search Style*/

.fulltable-filter{
    width: 90%;
    margin: auto;
}

.fulltable-filter input[type="text"]{
    border: 1px solid #B6B6B6 !important;
    border-radius: 5px !important;
    background-color: #fff !important;
    height: 35px !important;
    text-align: center !important;
    color: #707070 !important;

}

.fulltable-edition-control{
    /*padding..*/
}


#tabs input:focus{
    outline: none;
}

#tabs button:focus{
    outline: none;
}

#tabs input:focus::-webkit-input-placeholder { color:transparent; }
#tabs input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
#tabs input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
#tabs input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */

#tabs input::placeholder{
    font-style: italic;
    opacity: 0.7;
}

.actionbutton{
    cursor: pointer;
    border: none;
    background-color: rgba(0,0,0,0);
}

#tabs tr:nth-child(odd) {
    background-color: #d8f0f8;
}

#tabs tr:nth-child(even) {
    background-color: #CBEBF6;
}

/*Te laat background color*/
#telaat-table tr{
    background: #F6CBCB;
}

#telaat-table tr:nth-child(odd) {
    background-color: #f8d8d8;
}

#telaat-table tr:nth-child(even) {
    background-color: #F6CBCB;
}

#telaat-table thead tr{
    background-color: #F6CBCB !important;
}


/*Actie*/



.meldingVoltooid{
visibility: hidden;
color: #707070;
font-family: 'Roboto';
text-align: center;
border: 2px solid #B6B6B6;
background-color: #CBEBF6;
border-collapse: collapse;
border-radius: 1em;
overflow: hidden;
margin: auto;
width: 50%;
}
.meldingText{
    font-family: 'Roboto';

}
.meldingKleur{
/*    color: red !important;*/
font-weight: 900;
text-decoration: underline #707070 !important;
}
.action-buttons{
    padding: 0 10px 0 10px;
}

.trash{
    color: #F14444 !important;
    padding-left: 30px;
    font-size: 20px;
    cursor: pointer;
}

.pen{
    color: #67B0E3;
    font-size: 20px;
    padding-left: 10px;
    cursor: pointer;
}

.plus{
    color: #78E374;
    font-size: 25px;
    padding-left: 10px;
    cursor: pointer;
}

.fa-check{
    color: #78E374;
    font-size: 25px;
    padding-left: 10px;
    cursor: pointer;
}

.fa-times{
    color: #F14444 !important;
    padding-left: 30px;
    font-size: 25px;
    cursor: pointer;
}

.fa-caret-down{
    color: #707070 !important;
    padding-left: 5px;
    font-size: 15px;
    cursor: pointer;
}

.fa-caret-up{
    color: #707070 !important;
    padding-left: 5px;
    font-size: 15px;
    cursor: pointer;
}


/*table tr:first-child {*/
/*border-top: 8px solid #B6B6B6;*/
/*border-top-left-radius: 21px;*/
/*border-left: 8px solid #B6B6B6;*/
/*}*/

/*table tr:last-child {*/
/*border-bottom: 8px solid #B6B6B6;*/
/*border-top-left-radius: 21px;*/
/*border-right: 8px solid #B6B6B6;*/
/*border-bottom-right-radius: 21px;*/
/*}*/




/* table functions*/
table.fulltable span.fulltable-filter {
    position:relative;
    display:block;
}
table.fulltable input, table.fulltable select {
    position:relative;

    width:100%!important;

    font-family: tahoma, arial, helvetica;
    font-size: 9pt;

    clear: both;
    float: left;
    margin: 0.5em 0!important;
}
table.fulltable input.checkbox {
    width: 13px!important;
    height: 13px!important;
}
table.fulltable th.fulltable-selection-control {
    width: 30px;
}
/*table.fulltable tr.fulltable-editing td.fulltable-selection-control input.checkbox {
	display:none;
}*/
table.fulltable th.fulltable-selection-control, table.fulltable td.fulltable-selection-control {
    padding: 0 1em;
    width: 30px;
}
table.fulltable.fulltable-editable th.fulltable-edition-control {
    width: 70px;
}
table.fulltable.fulltable-editable th.fulltable-edition-control, table.fulltable.fulltable-editable td.fulltable-edition-control {
    padding: 0 1em;
}
table.fulltable.fulltable-editable input.invalid, table.fulltable.fulltable-editable select.invalid {
    border: solid 1px #FF3333;
    background-color:#FFEEEE;
}
table.fulltable thead th a.fulltable-sort {
    font-family: 'jquery.fulltable';
    font-size: 9px;
    position: relative;
    left: 6px;
    top: 0px;
    display: inline-block;
    width: 9px;
    height: 9px;
    cursor: pointer;
}
table.fulltable thead th.fulltable-asc i.fulltable-sort-desc {
    display:none!important;
}
table.fulltable thead th.fulltable-desc i.fulltable-sort-asc {
    display:none!important;
}
table.fulltable.fulltable-editable td.fulltable-edition-control {
    white-space:nowrap;
}
table.fulltable.fulltable-editable td.fulltable-edition-control a {
    font-family:'jquery.fulltable';
    font-size:16px;
    position:relative;
    display: inline-block;
    width:16px;
    height:16px;
    top:1px;
    line-height:16px;
    margin:0.5em;
    cursor:pointer;
    text-align:center;
}



table.fulltable.fulltable-editable td.fulltable-edition-control i.fulltable-create {
    display:none;
}
table.fulltable.fulltable-editable tr.fulltable-creating td.fulltable-edition-control i.fulltable-create {
    display:inline-block!important;
}
table.fulltable.fulltable-editable tr.fulltable-creating td.fulltable-edition-control i.fulltable-save {
    display:none!important;
}
table.fulltable.fulltable-editable tr.fulltable-editing td.fulltable-edition-control i.fulltable-edit, table.fulltable.fulltable-editable tr.fulltable-editing td.fulltable-edition-control i.fulltable-remove {
    display:none;
}
table.fulltable.fulltable-editable tr td.fulltable-edition-control i.fulltable-save, table.fulltable.fulltable-editable tr td.fulltable-edition-control i.fulltable-discard {
    display:none;
}
table.fulltable.fulltable-editable tr.fulltable-editing td.fulltable-edition-control i.fulltable-save, table.fulltable.fulltable-editable tr.fulltable-editing td.fulltable-edition-control i.fulltable-discard {
    display:inline-block;
}

